Switch pipeline and workflow undo/redo to XML snapshots, fixes #8037
Replace incremental ChangeAction replay with gzip-compressed document
snapshots so undo/redo restores the whole pipeline or workflow instead of
puzzling typed deltas back together. TableView cell undo is unchanged.

Add a Maximum undo operations field on the Explorer Perspective options
tab that reads and writes PropsUi.getMaxUndo().